<resources>
    <string name="app_name">Toko</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="title_cart">Cart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Mật khẩu</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="register">Đăng ký</string>
    <string name="user_name">Họ và tên</string>
    <string name="email">Email</string>
    <string name="birthday">Ngày sinh</string>
    <string name="gender">Giới tính</string>
    <string name="female">Nữ</string>
    <string name="male">Nam</string>
    <string name="accept">Chấp nhận</string>
    <string name="search_placeholder">Tìm kiếm...</string>
    <string name="title_trending_tab_layout">Xu hướng mua sắm</string>
    <string name="text_popular_search">Tìm kiếm phổ biến</string>
    <string-array name="book_search_activity_sale_spinner_items">
        <item>Bán Chạy Tuần</item>
        <item>Bán Chạy Tháng</item>
        <item>Bán Chạy Năm</item>
        <item>Nổi Bật Tuần</item>
        <item>Nổi Bật Tháng</item>
        <item>Nổi Bật Năm</item>
        <item>Giảm Giá Nhiều</item>
        <item>Giá: Thấp - Cao</item>
        <item>Mới Nhất</item>
    </string-array>
    <string-array name="book_search_activity_in_stock_spinner_items">
        <item>Còn hàng</item>
        <item>Tất cả</item>
    </string-array>
</resources>