<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.HomeFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <!-- NestedScrollingChild goes here (NestedScrollView, RecyclerView, etc.). -->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:id="@+id/nested_scroll_view_home"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            app:layout_behavior="@string/searchbar_scrolling_view_behavior"
            >
            <!-- Screen content goes here. -->
            <ScrollView
                android:id="@+id/scroll_view_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:scrollbars="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    >
                    <androidx.viewpager2.widget.ViewPager2
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:id="@+id/view_pager2_carousel"
                        />
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginHorizontal="8dp"
                        app:cardElevation="4dp"
                        style="@style/Widget.Material3.CardView.Elevated"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"

                            android:layout_margin="8dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/title_trending_tab_layout"
                                android:textStyle="bold"
                                android:textSize="20sp"/>
                            <com.google.android.material.tabs.TabLayout
                                android:layout_marginVertical="8dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/tab_layout"
                                android:elevation="6dp"
                                app:tabMode="scrollable"
                                style="@style/Widget.Material3.TabLayout.OnSurface"

                                />
                            <androidx.recyclerview.widget.RecyclerView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/recycler_view_trending"/>

                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginHorizontal="8dp"
                        app:cardElevation="4dp"
                        style="@style/Widget.Material3.CardView.Elevated"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_margin="8dp">
                            <com.google.android.material.tabs.TabLayout
                                android:layout_marginVertical="8dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/tab_layout_manga"
                                android:elevation="6dp"
                                app:tabMode="scrollable"
                                style="@style/Widget.Material3.TabLayout.OnSurface"

                                />
                            <androidx.recyclerview.widget.RecyclerView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/recycler_view_manga"/>

                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"/>
                </LinearLayout>
            </ScrollView>

        </androidx.core.widget.NestedScrollView>


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appbar_home">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                app:layout_scrollFlags="scroll"
                android:textSize="20dp"/>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tool_bar_main"
                >
                    <com.google.android.material.search.SearchBar
                        android:layout_marginVertical="5dp"
                        android:id="@+id/search_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_scrollFlags="enterAlways"
                        android:hint="@string/search_placeholder"
                        app:menu="@menu/home_menu"
                        />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>



        <com.google.android.material.search.SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_view"
            android:hint="@string/search_placeholder"
            app:layout_anchor="@id/search_bar"
            >
            <!-- Search suggestions/results go here (ScrollView, RecyclerView, etc.). -->
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_margin="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_trending_up_24"/>
                        <TextView
                            android:layout_gravity="center"
                            android:textSize="20dp"
                            android:layout_marginLeft="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/text_popular_search"/>
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/recycler_view_popular_search"/>
                </LinearLayout>
                <!--<LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_margin="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_dashboard_black_24dp"/>
                        <TextView
                            android:layout_gravity="center"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:layout_marginLeft="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Danh mục nổi bật"/>
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/popular_category_recyclerview"/>
                </LinearLayout>-->
            </LinearLayout>
        </com.google.android.material.search.SearchView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>